# littlessollm

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  LICENSE.md  Makefile  README.md  README_pypi.md  pyproject.toml
.github/workflows/: buildmultiarchandpush.yml  lintnmypyntests.yml
k8s-deploy/: idp-mapping.example.yaml  k8s-idp-auth.yaml
littlessollm/: __init__.py  asgi.py  auth.py  config.py  entrypoint.py  sso.py
repo_scripts/: blurimage.py  build-container-multiarch.sh  check_ghcr_token.py  discover_litellm_version.sh  include.sh  initial_setup_github.sh  update_badge.py
tests/: test_config.py  test_entrypoint.py
